--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,13 @@
     </head>
     <body>
         <h1>Lalli Lottó</h1>
-
-        <form method="post" action="/calculate">
-            <input type="text" name="rass" placeholder="Enter ass">
-            <button type="submit">Submit</button>
-        </form>
+	<form name="Item_1" action="results.html" method='POST'>
+	    <select name="Item_1">
+		<option value="35">35</option>
+		<option value="40">40</option>        
+		<option value="45">45</option>        
+	    </select>
+	    <button type="submit">Calculate!</button>
+	</form>
     </body>
 </html>
